--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build image
         run: docker build -t kserge2001/portfolio .
-
-      -name: Run a multi-line script
+      -name: push image 
        run:
             docker login -u kserge2001 -p ${{secrets.REGISTRY_PASS}}
             docker push kserge2001/portfolio
